[project]
name = "account-evolving-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-cloud-aiplatform>=1.151.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-documentai>=3.14.0",
    "google-genai>=1.75.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
